# Tmux-Plugin-Panel

./: Cargo.toml  LICENSE  README.md  REGISTRY_FORMAT.md  registry.json
.github/workflows/: release.yml
scoop/: tmuxpanel.json  tppanel.json
scripts/: publish-choco.ps1
src/: app.rs  config.rs  detect.rs  github.rs  main.rs  plugins.rs  registry.rs  themes.rs  ui.rs
