[package]
name = "tppanel"
version = "0.1.0"
edition = "2021"
description = "A full-fledged TUI plugin panel for tmux — the modern alternative to TPM"
license = "MIT"
readme = "README.md"
keywords = ["tmux", "plugin", "manager", "tui", "terminal"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
dirs = "6"
anyhow = "1"
