[package]
name = "tmuxpanel"
version = "0.1.1"
edition = "2021"
description = "A full-fledged TUI plugin panel for tmux — the modern alternative to TPM"
license = "MIT"
readme = "README.md"
repository = "https://github.com/marlocarlo/Tmux-Plugin-Panel"
keywords = ["tmux", "plugin", "manager", "tui", "terminal"]
categories = ["command-line-utilities"]
exclude = [
    "target/",
    "packages/",
    "scoop/",
    "scripts/",
    ".github/",
    "icon.svg",
]

[[bin]]
name = "tmuxpanel"
path = "src/main.rs"

[[bin]]
name = "tmuxplugins"
path = "src/main.rs"

[[bin]]
name = "tmuxthemes"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
dirs = "6"
anyhow = "1"
